# arxiv-search

./: .gitignore  DYNAMIC_SEARCH_GUIDE.md  README.md
.github/: dependabot.yml
crates/core/: Cargo.toml
crates/core/src/: arxiv.rs  content.rs  html.rs  lib.rs  paper.rs  pdf.rs  rate_limit.rs  segmentation.rs  semantic_scholar.rs
crates/core/src/metadata/: analyzer.rs  kaggle.rs  mod.rs
crates/core/src/search/: filter.rs  query.rs
crates/native/: Cargo.toml
crates/native/examples/: kaggle_search.rs
crates/native/src/: db.rs  fetch.rs  main.rs  persistence.rs  rate_limit.rs  tool.rs
crates/native/tests/: fallback_integration.rs  stress_tests.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
datasets/arxiv_mcp_sft/: README.md  arxiv_mcp_sft.jsonl  build_dataset.py
docs/superpowers/specs/: 2026-04-15-arxiv-mcp-design.md
