[package]
name = "arxiv-search-rs-mcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core logic for arxiv-search-rs-mcp (no I/O)"

[lints]
workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
htmd = "0.5"
pdf-inspector = { git = "https://github.com/firecrawl/pdf-inspector" }

[dependencies.aws-sdk-s3]
version = "1"
optional = true

[dependencies.aws-config]
version = "1"
optional = true

[dependencies.aws-smithy-runtime]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[features]
default = []
s3 = ["aws-sdk-s3", "aws-config", "aws-smithy-runtime", "tokio"]
kaggle = ["reqwest"]
