[package]
name = "arxiv-search-rs-mcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core logic for arxiv-search-rs-mcp (no I/O)"

[lints]
workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
htmd = "0.5"
pdf-inspector = { git = "https://github.com/firecrawl/pdf-inspector" }
async-trait = "0.1.89"
