[package]
name = "arxiv-search-rs-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "arXiv search MCP server"

[[bin]]
name = "arxiv-search-mcp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
arxiv-search-rs-mcp-core = { path = "../core" }
rmcp = { version = "0.1", features = ["server", "transport-io", "transport-sse-server"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
schemars = "0.8"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1.89"
directories = "6"

[dev-dependencies]
tempfile = "3"
