[package]
name = "arxiv-search-rs-mcp-worker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "arXiv search MCP server — Cloudflare Workers"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
arxiv-search-rs-mcp-core = { path = "../core" }
worker = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
getrandom = { version = "0.4", features = ["wasm_js"] }
